css/style.css
/* ... */
    @media only screen and (max-width: 768px) {
      .testimontial__slider--page {
        margin-left: 8%;
        padding-left: 35%; } }
    .testimontial__slider--page--img {
      margin-left: 10%; }
      .testimontial__slider--page--img img {
        width: 80%; }
        @media only screen and (max-width: 1200px) {
          .testimontial__slider--page--img img {
            padding-top: 15%;
            width: 80%; } }
        @media only screen and (max-width: 768px) {
          .testimontial__slider--page--img img {
            width: 50%;
            margin-left: -20%;
            text-align: center; } }
    .testimontial__slider--page--text {
      color: #999999;
      font-family: 'Roboto', sans-serif;
      font-style: italic;
      width: 70%; }
      @media only screen and (max-width: 768px) {
        .testimontial__slider--page--text {
          width: 200%;
          margin-top: 50px;
          margin-left: -85%;
          margin-right: 10%; } }
    .testimontial__slider--page--name {
      padding-top: 3%; }
      @media only screen and (max-width: 768px) {
        .testimontial__slider--page--name {
          margin-left: -85%; } }
      .testimontial__slider--page--name--name {
        font-family: 'Kaushan Script', cursive; }

.carousel-control.left,
.carousel-control.right {
  background-image: none;
  height: 50px;
  margin-top: 0%; }
  @media only screen and (max-width: 768px) {
    .carousel-control.left img,
    .carousel-control.right img {
      margin-top: 10%; } }

#services {
  margin-bottom: 5%; }
  #services .services__gallery .row {
    margin: auto; }
    #services .services__gallery .row--first {
      margin-bottom: 5%; }
    #services .services__gallery .row--second {
      margin-bottom: 5%; }
      @media (min-width: 992px) {
        #services .services__gallery .row--second {
          margin-top: 5%; } }
  #services .services__gallery .left {
    margin-left: 5%; }
  #services .services__gallery__block {
    border-color: #95e1d3;
    border-radius: 10px;
    -webkit-transition: all 500ms linear;
    -moz-transition: all 500ms linear;
    -o-transition: all 500ms linear;
    -ms-transition: all 500ms linear;
    transition: all 500ms linear; }
    @media (min-width: 768px) {
      #services .services__gallery__block {
        width: 30%;
        margin-left: 1.5%; } }
    #services .services__gallery__block .title {
      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
      font-size: 14px;
      text-transform: uppercase;
      font-weight: bold;
      -webkit-transition: all 500ms linear;
      -moz-transition: all 500ms linear;
      -o-transition: all 500ms linear;
      -ms-transition: all 500ms linear;
      transition: all 500ms linear; }
      @media (max-width: 350px) {
        #services .services__gallery__block .title {
          padding-left: 5%; } }
    #services .services__gallery__block .description {
      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
      font-size: 14px;
      -webkit-transition: all 500ms linear;
      -moz-transition: all 500ms linear;
      -o-transition: all 500ms linear;
      -ms-transition: all 500ms linear;
      transition: all 500ms linear; }
      @media (max-width: 350px) {
        #services .services__gallery__block .description {
          padding-left: 5%; } }
    #services .services__gallery__block__pic {
      -webkit-transition-property: -webkit-transform;
      -webkit-transition-duration: 500ms;
      -moz-transition-property: -moz-transform;
      -moz-transition-duration: 500ms;
      transition-property: transform;
      transition-duration: 500ms; }
      #services .services__gallery__block__pic img {
        margin-top: 5px;
        width: 32px;
        height: 31px; }
    @media only screen and (max-width: 768px) {
      #services .services__gallery__block {
        margin: 5% 0 5% 0 !important; } }
  #services .services__gallery .middle-bar {
    display: inline-block;
    border: 1px solid #e5e5e5;
    width: 90%;
    margin-left: 5%; }

.services__gallery .services__gallery__block:hover .title {
  color: #95e1d3;
  -webkit-animation: moveFromTop 500ms ease-in-out;
  -moz-animation: moveFromTop 500ms ease-in-out;
  -ms-animation: moveFromTop 500ms ease-in-out; }

.services__gallery .services__gallery__block:hover .description {
  -webkit-animation: moveFromBottom 500ms ease-in-out;
  -moz-animation: moveFromBottom 500ms ease-in-out;
  -ms-animation: moveFromBottom 500ms ease-in-out; }

.services__gallery .services__gallery__block:hover .pic {
  -webkit-animation-name: rotate;
  -webkit-animation-duration: 500ms;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  -moz-animation-name: rotate;
  -moz-animation-duration: 500ms;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: linear;
  animation-name: rotate;
  animation-duration: 500ms;
  animation-iteration-count: 1;
  animation-timing-function: linear; }

@-webkit-keyframes moveFromBottom {
  from {
    opacity: 0;
    -webkit-transform: translateY(200%); }
  to {
    opacity: 1;
    -webkit-transform: translateY(0%); } }
@-moz-keyframes moveFromBottom {
  from {
    opacity: 0;
    -moz-transform: translateY(200%); }
  to {
    opacity: 1;
    -moz-transform: translateY(0%); } }
@-ms-keyframes moveFromBottom {
  from {
    opacity: 0;
    -ms-transform: translateY(200%); }
  to {
    opacity: 1;
    -ms-transform: translateY(0%); } }
@-webkit-keyframes moveFromTop {
  from {
    opacity: 0;
    -webkit-transform: translateY(-200%); }
  to {
    opacity: 1;
    -webkit-transform: translateY(0%); } }
@-moz-keyframes moveFromTop {
  from {
    opacity: 0;
    -moz-transform: translateY(-200%); }
  to {
    opacity: 1;
    -moz-transform: translateY(0%); } }
@-ms-keyframes moveFromTop {
  from {
    opacity: 0;
    -ms-transform: translateY(-200%); }
  to {
    opacity: 1;
    -ms-transform: translateY(0%); } }
/* ... */

